# interpreter

./: interpreter.cabal  lib.hs  main.hs
app/: Main.hs
src/: BinaryTree.hs  Compiler.hs  Interpreter.hs  Lang.hs  Nameless.hs  StackMachine.hs
test/: CompilerSpec.hs  InterpreterSpec.hs  LangSpec.hs  NamelessSpec.hs  StackMachineSpec.hs
