cabal-version:    2.4
name:         interpreter
version:      0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:       perinze
maintainer:     perinzefaper@foxmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , containers
  exposed-modules:
    BinaryTree
    Lang
    Nameless
    StackMachine

executable interpreter
  import: common-settings
  main-is:      Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
      base ^>=4.16.4.0
    , interpreter
  hs-source-dirs:   app

test-suite test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  other-modules:
    LangSpec
    NamelessSpec
    StackMachineSpec
    CompilerSpec
  build-depends:
      base
    , hspec
    , hspec-discover
    , raw-strings-qq
    , interpreter
  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover
